# fast-api-poc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/: env.py
alembic/versions/: 4c771d44e104_create_users_table.py  7950cde64f7d_create_new_products_table.py
app/: database.py  main.py  models.py  test.py
tests/: test_main.py
ui/: .eslintrc.json  App.css  App.tsx
